@@ -1224,62 +1224,6 @@ Citations
  HTML-Specific
 ---------------
 
-Meta
-====
-
-:Directive Type: "meta"
-:Doctree Element: meta (non-standard)
-:Directive Arguments: None.
-:Directive Options: None.
-:Directive Content: Must contain a flat field list.
-
-The "meta" directive is used to specify HTML metadata stored in HTML
-META tags.  "Metadata" is data about data, in this case data about web
-pages.  Metadata is used to describe and classify web pages in the
-World Wide Web, in a form that is easy for search engines to extract
-and collate.
-
-Within the directive block, a flat field list provides the syntax for
-metadata.  The field name becomes the contents of the "name" attribute
-of the META tag, and the field body (interpreted as a single string
-without inline markup) becomes the contents of the "content"
-attribute.  For example::
-
-    .. meta::
-       :description: The reStructuredText plaintext markup language
-       :keywords: plaintext, markup language
-
-This would be converted to the following HTML::
-
-    <meta name="description"
-        content="The reStructuredText plaintext markup language">
-    <meta name="keywords" content="plaintext, markup language">
-
-Support for other META attributes ("http-equiv", "scheme", "lang",
-"dir") are provided through field arguments, which must be of the form
-"attr=value"::
-
-    .. meta::
-       :description lang=en: An amusing story
-       :description lang=fr: Une histoire amusante
-
-And their HTML equivalents::
-
-    <meta name="description" lang="en" content="An amusing story">
-    <meta name="description" lang="fr" content="Une histoire amusante">
-
-Some META tags use an "http-equiv" attribute instead of the "name"
-attribute.  To specify "http-equiv" META tags, simply omit the name::
-
-    .. meta::
-       :http-equiv=Content-Type: text/html; charset=ISO-8859-1
-
-HTML equivalent::
-
-    <meta http-equiv="Content-Type"
-         content="text/html; charset=ISO-8859-1">
-
-
 Imagemap
 ========
 
@@ -1912,6 +1856,76 @@ The directive may be used without an argument to restore the initial
 default interpreted text role, which is application-dependent.  The
 initial default interpreted text role of the standard reStructuredText
 parser is "title-reference".
+
+
+Metadata
+========
+
+:Directive Type: "meta"
+:Doctree Element: pending_, meta (non-standard)
+:Directive Arguments: None.
+:Directive Options: None.
+:Directive Content: Must contain a flat field list.
+
+The "meta" directive is used to specify metadata\ [#]_ to be stored
+in, e.g., HTML META tags or as ODT file properties.  If the output
+format does not support "invisible" metadata, it is silently
+dropped by the writer.
+
+.. note:: Data from some `bibliographic fields`_ is automatically
+   extracted and stored in META tags, too. However, Bibliographic
+   Fields are also visible in the document's screen rendering or
+   printout. 
+   
+   For an "invisible" *document title*, see the `metadata document
+   title`_ directive below.
+
+Within the directive block, a flat field list provides the syntax for
+metadata.  The field name becomes the contents of the "name" attribute
+of the META tag, and the field body (interpreted as a single string
+without inline markup) becomes the contents of the "content"
+attribute.  For example::
+
+    .. meta::
+       :description: The reStructuredText plaintext markup language
+       :keywords: plaintext, markup language
+
+This would be converted to the following HTML::
+
+    <meta name="description"
+        content="The reStructuredText plaintext markup language">
+    <meta name="keywords" content="plaintext, markup language">
+
+Support for other META attributes ("http-equiv", "scheme", "lang",
+"dir") are provided through field arguments, which must be of the form
+"attr=value"::
+
+    .. meta::
+       :description lang=en: An amusing story
+       :description lang=fr: Une histoire amusante
+
+And their HTML equivalents::
+
+    <meta name="description" lang="en" content="An amusing story">
+    <meta name="description" lang="fr" content="Une histoire amusante">
+
+Some META tags use an "http-equiv" attribute instead of the "name"
+attribute.  To specify "http-equiv" META tags, simply omit the name::
+
+    .. meta::
+       :http-equiv=Content-Type: text/html; charset=ISO-8859-1
+
+HTML equivalent::
+
+    <meta http-equiv="Content-Type"
+         content="text/html; charset=ISO-8859-1">
+
+.. [#] "Metadata" is data about data, in this case data about the
+   document. Metadata is, e.g., used to describe and classify web
+   pages in the World Wide Web, in a form that is easy for search
+   engines to extract and collate.
+
+.. _bibliographic fields: restructuredtext.html#bibliographic-fields
 
 
 Metadata Document Title
